@@ -239,9 +239,6 @@ sub _core_opts {
         db-host|h=s
         db-port|p=i
         top-dir|dir=s
-        deploy-dir=s
-        revert-dir=s
-        verify-dir|test-dir=s
         extension=s
         etc-path
         no-pager
@@ -299,25 +296,7 @@ sub _parse_core_opts {
     }
 
     # Convert files and dirs to objects.
-    for my $dir (qw(
-        top_dir
-        deploy_dir
-        revert_dir
-        verify_dir
-    )) {
-        next unless defined $opts{$dir};
-        if ($dir ne 'top_dir') {
-            # XXX deprecated.
-            (my $opt = $dir) =~ s/_/-/;
-            $self->warn(__x(
-                qq{  The "{opt}" option is deprecated;\n  Instead use "--dir {dir}={val}" if available.},
-                opt => $opt,
-                dir => $dir,
-                val => $opts{$dir},
-            ));
-        }
-        $opts{$dir} = dir $opts{$dir} if defined $opts{$dir};
-    }
+    $opts{top_dir}   = dir   $opts{top_dir} if defined $opts{top_dir};
     $opts{plan_file} = file $opts{plan_file} if defined $opts{plan_file};
 
     # Normalize the options (remove undefs) and return.
